# docs/swagger/swagger.json
@@ -231,11 +231,13 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "结束位置",
                         "name": "end",
                         "in": "query"
                     },
                     {
                         "type": "integer",
+                        "description": "起始位置",
                         "name": "start",
                         "in": "query"
                     }
@@ -263,11 +265,13 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "结束位置",
                         "name": "end",
                         "in": "query"
                     },
                     {
                         "type": "integer",
+                        "description": "起始位置",
                         "name": "start",
                         "in": "query"
                     }
@@ -295,6 +299,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "用户ID",
                         "name": "userId",
                         "in": "query"
                     }
@@ -322,6 +327,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "用户ID",
                         "name": "userId",
                         "in": "query"
                     }
@@ -362,9 +368,11 @@
             "type": "object",
             "properties": {
                 "password": {
+                    "description": "密码",
                     "type": "string"
                 },
                 "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
@@ -373,12 +381,19 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "状态码",
                     "type": "integer"
                 },
                 "data": {
-                    "$ref": "#/definitions/auth.LoginRespData"
+                    "description": "数据",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/auth.LoginRespData"
+                        }
+                    ]
                 },
                 "message": {
+                    "description": "消息",
                     "type": "string"
                 }
             }
@@ -387,6 +402,7 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "description": "登录凭证",
                     "type": "string"
                 }
             }
@@ -395,12 +411,15 @@
             "type": "object",
             "properties": {
                 "email": {
+                    "description": "邮箱",
                     "type": "string"
                 },
                 "password": {
+                    "description": "密码",
                     "type": "string"
                 },
                 "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
@@ -409,9 +428,11 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "状态码",
                     "type": "integer"
                 },
                 "message": {
+                    "description": "消息",
                     "type": "string"
                 }
             }
@@ -420,18 +441,23 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "description": "MCPServer 描述",
                     "type": "string"
                 },
                 "isPublic": {
+                    "description": "是否公开",
                     "type": "boolean"
                 },
                 "name": {
+                    "description": "MCPServer 名称",
                     "type": "string"
                 },
                 "openProxy": {
+                    "description": "是否开启代理",
                     "type": "boolean"
                 },
                 "url": {
+                    "description": "MCPServer URL",
                     "type": "string"
                 }
             }
@@ -440,9 +466,11 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "状态码",
                     "type": "integer"
                 },
                 "message": {
+                    "description": "消息",
                     "type": "string"
                 }
             }
@@ -451,9 +479,11 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "description": "Token 描述",
                     "type": "string"
                 },
                 "id": {
+                    "description": "MCPServer ID",
                     "type": "integer"
                 }
             }
@@ -462,12 +492,19 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "状态码",
                     "type": "integer"
                 },
                 "data": {
-                    "$ref": "#/definitions/mcpserver.GenerateTokenRespData"
+                    "description": "数据",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/mcpserver.GenerateTokenRespData"
+                        }
+                    ]
                 },
                 "message": {
+                    "description": "消息",
                     "type": "string"
                 }
             }
@@ -476,6 +513,7 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "description": "生成的 Token",
                     "type": "string"
                 }
             }
@@ -484,15 +522,18 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "状态码",
                     "type": "integer"
                 },
                 "data": {
+                    "description": "数据列表",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/mcpserver.GetMCPServerListRespData"
                     }
                 },
                 "message": {
+                    "description": "消息",
                     "type": "string"
                 }
             }
@@ -501,18 +542,27 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "description": "描述",
                     "type": "string"
                 },
+                "id": {
+                    "description": "MCPServer ID",
+                    "type": "integer"
+                },
                 "isPublic": {
+                    "description": "是否公开",
                     "type": "boolean"
                 },
                 "name": {
+                    "description": "名称",
                     "type": "string"
                 },
                 "openProxy": {
+                    "description": "是否开启代理",
                     "type": "boolean"
                 },
                 "url": {
+                    "description": "URL",
                     "type": "string"
                 }
             }
@@ -521,12 +571,19 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "状态码",
                     "type": "integer"
                 },
                 "data": {
-                    "$ref": "#/definitions/mcpserver.GetMCPServerRespData"
+                    "description": "数据",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/mcpserver.GetMCPServerRespData"
+                        }
+                    ]
                 },
                 "message": {
+                    "description": "消息",
                     "type": "string"
                 }
             }
@@ -535,24 +592,34 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "description": "描述",
                     "type": "string"
                 },
+                "id": {
+                    "description": "MCPServer ID",
+                    "type": "integer"
+                },
                 "isPublic": {
+                    "description": "是否公开",
                     "type": "boolean"
                 },
                 "name": {
+                    "description": "名称",
                     "type": "string"
                 },
                 "openProxy": {
+                    "description": "是否开启代理",
                     "type": "boolean"
                 },
                 "token": {
+                    "description": "Token列表",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/mcpserver.TokenData"
                     }
                 },
                 "url": {
+                    "description": "URL",
                     "type": "string"
                 }
             }
@@ -561,9 +628,11 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "description": "描述",
                     "type": "string"
                 },
                 "token": {
+                    "description": "Token",
                     "type": "string"
                 }
             }
@@ -572,21 +641,27 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "description": "描述",
                     "type": "string"
                 },
                 "id": {
+                    "description": "MCPServer ID",
                     "type": "integer"
                 },
                 "isPublic": {
+                    "description": "是否公开",
                     "type": "boolean"
                 },
                 "name": {
+                    "description": "名称",
                     "type": "string"
                 },
                 "openProxy": {
+                    "description": "是否开启代理",
                     "type": "boolean"
                 },
                 "url": {
+                    "description": "URL地址",
                     "type": "string"
                 }
             }
@@ -595,9 +670,11 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "状态码",
                     "type": "integer"
                 },
                 "message": {
+                    "description": "消息",
                     "type": "string"
                 }
             }
@@ -606,12 +683,19 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "状态码",
                     "type": "integer"
                 },
                 "data": {
-                    "$ref": "#/definitions/user.GetUserInfoRespData"
+                    "description": "数据",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/user.GetUserInfoRespData"
+                        }
+                    ]
                 },
                 "message": {
+                    "description": "消息",
                     "type": "string"
                 }
             }
@@ -620,12 +704,15 @@
             "type": "object",
             "properties": {
                 "nickname": {
+                    "description": "昵称",
                     "type": "string"
                 },
                 "role": {
+                    "description": "角色",
                     "type": "string"
                 },
                 "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
